# stoq-project

./: .gitignore  Makefile  README.md
api/: .env.example  Dockerfile  alembic.ini  compose.yml  pyproject.toml
api/src/adapters/: convert_db_model.py
api/src/application/dtos/: create_product.py  update_product.py
api/src/application/exceptions/: exceptions.py
api/src/application/usecases/: create_product.py  get_product.py  list_products.py  update_product.py
api/src/domain/entities/: pagination.py  product.py
api/src/domain/repositories/: product_repository.py
api/src/infrastructure/: config.py
api/src/infrastructure/api/: container.py  main.py
api/src/infrastructure/api/routes/: product.py
api/src/infrastructure/cli/: main.py
api/src/infrastructure/cli/commands/: seed.py
api/src/infrastructure/database/: connection.py  models.py
api/src/infrastructure/database/alembic/: env.py
api/src/infrastructure/database/alembic/versions/: 4929a91460cc_initial_structure.py
api/src/infrastructure/repositories/: product_repository.py
api/src/utils/: logs.py
api/tests/integration/: conftest.py  test_product_api.py
front/product-app/: README.md  index.html  package-lock.json  package.json
front/product-app/src/: App.tsx  index.css
front/product-app/src/components/: Pagination.tsx
front/product-app/src/pages/: ProductForm.tsx  ProductList.tsx
front/product-app/src/services/: productService.ts
front/product-app/src/types/: product.ts
